*vdrplugin-text2skin-0.0.1 (2004/06/05)
 version bump

*vdrplugin-text2skin-0.0.1-rc4 (2004/03/01)
 initial version