@@ -1,2 +1,5 @@
 MD5 199c8d02c315e5894e620107749cfd83 vdr-text2skin-0.0.2.tgz 46369
 MD5 4a7b36344e18c30cf69336245c8621cb demo.tgz 400986
+MD5 ba44fca210610277934c9229e47f39f0 Skin-EgalsTry-0.0.3.tar.gz 102158
+MD5 358221a5f73dba4ad867e31584bf69ee MoroneFlat-0.0.2a.tar.gz 94375
+MD5 8e5ca525313a3e6078e80db5960d82aa EgalOrange-0.0.3.tar.gz 90430
