@@ -1,3 +1,6 @@
+*vdrplugin-text2skin-0.0.2 (2004/06/10)
+ version bump & demo skins added
+
 *vdrplugin-text2skin-0.0.1 (2004/06/05)
  version bump
 
